--- a/styles/main.css
+++ b/styles/main.css
@@ -14,7 +14,16 @@ a {
 }
 
 .icon {
+    box-sizing: border-box;
+    width: 26.8vmax;
+    height: 26.8vmax;
+    margin: 3vmax;
+    min-width: 200px;
+    min-height: 200px;
+    padding: 10vmax 0;
+    border: 0.2vmax solid black;
     transition: transform 0.2s;
+    float: left;
 }
 
 .icon:hover {
@@ -23,89 +32,21 @@ a {
 
 .icon-title {
     text-align: center;
-    line-height: 1;
-    padding: 30px 0;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 4vmax;
+    line-height: 1;
+    /* padding: 0 2vmax; */
 }
 
 #stretch {
     background-color: rgba(255, 71, 29, 0.9);
-	height: 130px;
-    width: 200px;
-    padding: 35px 0;
-    margin: 40px;
-    border: 2px solid black;
-    float: left;
 }
 
-#scene {
-    width: 200px;
-    height: 200px;
-    margin: 40px;
-    float: left;
-    perspective: 600px;
+#cube {
+    background-color: rgba(0, 255, 255, 0.9);
 }
 
 #more {
     background-color: rgba(255, 183, 29, 0.9);
-	height: 130px;
-    width: 200px;
-    padding: 35px 0;
-    margin: 40px;
-    border: 2px solid black;
-    float: left;
-}
-
-.cube {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-
-.cubeface {
-    width: 200px;
-    height: 200px;
-    position: absolute;
-    text-align: center;
-    line-height: 200px;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-    font-size: 40px;
-    border: 2px solid black;
-}
-
-#front {
-    background-color: rgba(0, 255, 255, 0.9);
-    padding: 35px 0;
-    height: 130px;
-    transform: translateZ(0px);
-
-}
-
-#back {
-    background-color: rgba(137, 43, 226, 0.7);
-    transform: rotateY(180deg) translateZ(200px);
-}
-
-#left {
-    background-color: rgba(43, 226, 150, 0.7);
-    transform: rotateY(-90deg) translateZ(100px) translateX(-100px);
-}
-
-#right {
-    background-color: rgba(186, 226, 43, 0.7);
-    transform: rotateY(90deg) translateZ(100px) translateX(100px);
-}
-
-#top {
-    background-color: rgba(226, 116, 43, 0.7);
-    transform: rotateX(90deg) translateZ(100px) translateY(-100px);
-}
-
-#bottom {
-    background-color: rgba(226, 43, 128, 0.7);
-    transform: rotateX(-90deg) translateZ(100px) translateY(100px);
 }
