--- a/styles/main.css
+++ b/styles/main.css
@@ -63,7 +63,7 @@ a {
     .icon {
         width: 96vmin;
         height: 96vmin;
-        margin: 3vmin;
-        color: white;
+        margin: 3vmin 0;
+        color: white; /* for testing */
     }
 }
