--- a/styles/main.css
+++ b/styles/main.css
@@ -59,7 +59,7 @@ a {
     zoom: 1.0 ;
 }
 
-@media screen and (max-width:320px) {
+@media only screen and (max-device-width:320px) {
     .icon {
         width: 96vmin;
         height: 96vmin;
