Added a missing closing curly brace

--- a/styles/main.css
+++ b/styles/main.css
@@ -44,8 +44,8 @@ a {
         padding: 10vmax 0;
         border: 0.2vmax solid black;
         transition: transform 0.2s;
-        color: white; /* for testing */
     }
+}
 
 .icon:hover {
     transform: scale(1.05)
