Changed color to white on mobile for testing

--- a/styles/main.css
+++ b/styles/main.css
@@ -44,6 +44,7 @@ a {
         padding: 10vmax 0;
         border: 0.2vmax solid black;
         transition: transform 0.2s;
+        color: white;  /* for testing */
     }
 }
 
