--- a/styles/main.css
+++ b/styles/main.css
@@ -72,8 +72,7 @@ a {
     background-color: rgba(255, 183, 29, 0.9);
 }
 
-@viewport {
-    width: device-width ;
-    zoom: 1.0 ;
-}
+@-ms-viewport {
+    width: extend-to-zoom;
+    zoom: 1.0;
 }
